# decktor-cli

./: .gitignore  LICENSE  MANIFEST.in  README.md  environment.yaml  pyproject.toml
notebooks/: quickstart.ipynb
src/decktor/: app.py  cli.py  core.py  download_models.py  models.py  utils.py
src/decktor/llm/: __init__.py  anthropic.py  base.py  free.py  gemini.py  openai.py
src/decktor/prompts/: cli_batch.txt  cli_default.txt  cloze.txt  default.txt  iraqi.txt  iraqi_arabic.txt
src/decktor/styles/: main.css
tests/: test_core.py  test_integration.py
