[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "decktor"
version = "0.1.0"
authors = [
    { name = "Mauro Comi" },
]
description = "A simple tool to fix Anki cards using an LLM."
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }

dependencies = [
    "anki==24.11",
    "protobuf<6.0.0",
    "zstandard",
    "rich",
    "beautifulsoup4",
    "google-generativeai",
    "python-dotenv",
    "click",
]

[project.scripts]
decktor = "decktor.cli:main_group"

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "isort",
    "flake8",
]

[tool.setuptools]
package-dir = { "" = "src" }
include-package-data = true

[tool.setuptools.package-data]
decktor = ["*"]
